--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,6 +1,20 @@
-
+influxdb = {
+  url = "http://127.0.0.1:8086"
+  databaseName = "tickdata"
+  username = "root"
+  password = "root"
+}
 
 contract-configs = [
+  {// GBP.USD
+    c-conid = 12087797
+  },
+  {// USD.CHF
+    c-conid = 12087820
+  }
+]
+
+old-contract-configs = [
   {
     c-conid = 825711
     c-symbol = "DAX"
