--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,7 +1,16 @@
 ##### LOG4J daily rolling log files configuration #####
-log4j.rootLogger=INFO, RollingAppender
+log4j.rootLogger=DEBUG, RollingAppender
+log4j.logger.ticklog=INFO, TickdataAppender
+log4j.additivity.ticklog=false
+
 log4j.appender.RollingAppender=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.RollingAppender.File=logs/tickdata.log
+log4j.appender.RollingAppender.File=logs/capture.log
 log4j.appender.RollingAppender.DatePattern='.'yyyy-MM-dd
 log4j.appender.RollingAppender.layout=org.apache.log4j.PatternLayout
 log4j.appender.RollingAppender.layout.ConversionPattern=[%p] %d %c %M - %m%n
+
+log4j.appender.TickdataAppender=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.TickdataAppender.File=logs/tickdata.log
+log4j.appender.TickdataAppender.DatePattern='.'yyyy-MM-dd
+log4j.appender.TickdataAppender.layout=org.apache.log4j.PatternLayout
+log4j.appender.TickdataAppender.layout.ConversionPattern=%m%n
