--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -7,7 +7,7 @@ log4j.appender.RollingAppender=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.RollingAppender.File=logs/capture.log
 log4j.appender.RollingAppender.DatePattern='.'yyyy-MM-dd
 log4j.appender.RollingAppender.layout=org.apache.log4j.PatternLayout
-log4j.appender.RollingAppender.layout.ConversionPattern=[%p] %d %c %M - %m%n
+log4j.appender.RollingAppender.layout.ConversionPattern=[%p] %d %t - %m%n
 
 log4j.appender.TickdataAppender=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.TickdataAppender.File=logs/tickdata.log
