--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,34 +1,44 @@
 influxdb = {
   url = "http://127.0.0.1:8086"
-  databaseName = "tickdata"
+  databaseName = "ibmktdata"
   username = "root"
   password = "root"
 }
 
 contract-configs = [
   {// GBP.USD
-    c-conid = 12087797
+    conid = 12087797
+    exchange = "IDEALPRO"
+    historical-data = {bar-size: _1_min, head-date: 20190201, rth: true}
   },
   {// USD.CHF
-    c-conid = 12087820
+    conid = 12087820
+  },
+  {// SPX IND
+    conid = 416904
+  },
+  {// DAX IND
+    conid = 825711
+    exchange = "DTB"
+    historical-data = {bar-size: _1_min, head-date: 20190201, rth: true}
   }
 ]
 
 old-contract-configs = [
   {
-    c-conid = 825711
-    c-symbol = "DAX"
-    c-sec-type = "IND"
-    c-exchange = "DTB"
-    c-currency = "EUR"
+    conid = 825711
+    symbol = "DAX"
+    sec-type = "IND"
+    exchange = "DTB"
+    currency = "EUR"
   },
   {// GXBT Jan16'19
-    c-conid = 334355883
+    conid = 334355883
   },
   {// USD.CHF
-    c-conid = 12087820
+    conid = 12087820
   },
   {// GBP.USD
-    c-conid = 12087797
+    conid = 12087797
   }
 ]
